汉诺塔和N皇后

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "debug.console.closeOnEnd": true
+    "debug.console.closeOnEnd": true,
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
