算24以及配置文件修改

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "debug.console.closeOnEnd": true,
+    "debug.console.closeOnEnd": false,
     "files.associations": {
         "iostream": "cpp"
     }
